fixed spacing issues in portfolio section

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -267,9 +267,6 @@ text-align: center
     font-size: 3.6em;
 
 }
-.card .card-content{
-    height:18.5em;
-}
 
 }
 
